--- a/view/anomainpage.html
+++ b/view/anomainpage.html
@@ -51,9 +51,7 @@
           <li><a href="/">Home</a></li>
           <li class="drop-down"><a href="#services">Services</a>
             <ul>
-              <li><a href="/view/doctorscategory">Book Appointment</a></li>
-              <li><a href="/view/meditation">Group Session</a></li>
-              
+              <li><a href="/view/doctorscategory">Book Appointment</a></li>              
             </ul>
           </li>
           <li><a href="/view/blog">Blog</a></li>
@@ -98,8 +96,8 @@
             you can enjoy the complete anonymous experience when you chat with "POSITIVAE" strangers online.
         </p>
           <div class="text-center text-lg-left">
-            <a href="/text" class="btn-get-started scrollto">TEXT</a>
-            <a href="/video" class="btn-get-started scrollto">VIDEO</a>
+            <a href="https://positivae-anonymous-text.herokuapp.com/" class="btn-get-started scrollto">TEXT</a>
+            <a href="https://positivae-anonymous-video-chat.herokuapp.com/" class="btn-get-started scrollto">VIDEO</a>
           </div>
         </div>
       </div>
