--- a/view/doctorform.html
+++ b/view/doctorform.html
@@ -22,13 +22,13 @@
         <div class="section-title">
             <a href="/" class="close-btn fa fa-times" style="float: right; margin-right: 40px; margin-top: 20px;  font-size: 22px;  cursor: pointer; color: #fff;  text-decoration: none;  justify-content: center;"></a>
           </div>
-    <form style="padding: 80px 0px;">  
-      <div class="row1" ><input  type="text" id="subject" placeholder="Your Name" required style="width: 80%; padding: 10px 10px; margin-left: 10%; border-radius: 15px; border: none; outline: none; margin-bottom: 10px;" /></div>  
-        <div class="row2"><input  type="email" id="email" placeholder="Your email" required style="width: 80%; padding: 10px 10px; margin-left: 10%; border-radius: 15px; border: none; outline: none; margin-bottom: 10px;" /> </div>
-        <div class="row3"> <input  type="text" id="phone" placeholder="Phone Number" required style="width: 80%; padding: 10px 10px; margin-left: 10%; border-radius: 15px; border: none; outline: none; margin-bottom: 10px;" /> </div>
-        <div class="row4"><input  type="text" id="certlink" placeholder="Your Certificate Link" required style="width: 80%; padding: 10px 10px; margin-left: 10%; border-radius: 15px; border: none; outline: none; margin-bottom: 10px;" /></div>
+    <form action="https://docs.google.com/forms/u/5/d/e/1FAIpQLSeCkMHfuoETv_31EsG2L2vmrRPDBOtUscUdJiBNDFUhIezqjw/formResponse" style="padding: 80px 0px;">  
+      <div class="row1" ><input name="entry.2038811104" type="text" id="subject" placeholder="Your Name" required style="width: 80%; padding: 10px 10px; margin-left: 10%; border-radius: 15px; border: none; outline: none; margin-bottom: 10px;" /></div>  
+        <div class="row2"><input name="entry.712437446" type="email" id="email" placeholder="Your email" required style="width: 80%; padding: 10px 10px; margin-left: 10%; border-radius: 15px; border: none; outline: none; margin-bottom: 10px;" /> </div>
+        <div class="row3"> <input name="entry.362428623"  type="text" id="phone" placeholder="Phone Number" required style="width: 80%; padding: 10px 10px; margin-left: 10%; border-radius: 15px; border: none; outline: none; margin-bottom: 10px;" /> </div>
+        <div class="row4"><input name="entry.960263963" type="text" id="certlink" placeholder="Your Certificate Link" required style="width: 80%; padding: 10px 10px; margin-left: 10%; border-radius: 15px; border: none; outline: none; margin-bottom: 10px;" /></div>
         <div class="row5"><input  type="text" id="socialid" placeholder="Your LinkdIn Profile" required style="width: 80%; padding: 10px 10px; margin-left: 10%; border-radius: 15px; border: none; outline: none; margin-bottom: 10px;" />  </div>
-        <div class="row6">  <input  type="submit" value="Submit" id="but" style="width: 30%; padding: 10px 10px; margin-left: 35%; border-radius: 15px; border: none; outline: none; margin-bottom: 10px;"/></div>
+        <div class="row6">  <input name="entry.450697848" type="submit" value="Submit" id="but" style="width: 30%; padding: 10px 10px; margin-left: 35%; border-radius: 15px; border: none; outline: none; margin-bottom: 10px;"/></div>
       
     </form>
     </section>
