--- a/view/home.html
+++ b/view/home.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>index</title>
+  <title>POSITIVAE HOME</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -47,7 +47,7 @@
        <li class="drop-down"><a href="#services">Services</a>
          <ul>
            <li><a href="/view/doctorscategory">Book Appointment</a></li>
-           <li><a href="/view/meditation">Meditation</a></li>
+          
          </ul>
        </li>
        <li ><a href="/view/blog">Blog</a></li>
@@ -358,29 +358,28 @@
       </div>
 
       <div class="col-lg-6 mt-4 mt-lg-0">
-        <form action="forms/contact.php" method="post" role="form" class="php-email-form w-100" data-aos="fade-up">
+        <form action="https://docs.google.com/forms/u/5/d/e/1FAIpQLSf3vRIATVhmZmyG1mZ5-PT_FXWmvN1DCgNIEsWMn-j1Za8iag/formResponse" method="post" role="form" class="php-email-form w-100" data-aos="fade-up">
           <div class="form-row">
             <div class="col-md-6 form-group">
-              <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+              <input type="text" name="entry.207847041" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
               <div class="validate"></div>
             </div>
             <div class="col-md-6 form-group">
-              <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
+              <input type="email" class="form-control" name="entry.242858737" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
               <div class="validate"></div>
             </div>
           </div>
           <div class="form-group">
-            <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
+            <input type="text" class="form-control" name="entry.1262468637" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
             <div class="validate"></div>
           </div>
           <div class="form-group">
-            <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
+            <textarea class="form-control" name="entry.681186864" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
             <div class="validate"></div>
           </div>
           <div class="mb-3">
             <div class="loading">Loading</div>
-            <div class="error-message"></div>
-            <div class="sent-message">Your message has been sent. Thank you!</div>
+            <div>Your message has been sent. Thank you!</div>
           </div>
           <div class="text-center"><button type="submit">Send Message</button></div>
         </form>
