--- a/view/doctorabout.html
+++ b/view/doctorabout.html
@@ -50,13 +50,12 @@
           <li class="drop-down"><a href="#services">Services</a>
             <ul>
               <li><a href="/view/doctorscategory">Book Appointment</a></li>
-              <li><a href="">Group Session</a></li>
-              <li><a href="">Positivae Social</a></li>
+           
             </ul>
           </li>
           <li><a href="/view/blog">Blog</a></li>
           <li><a href="/view/anomainpage">Anonymous Chat</a></li>
-          <li><a href="/#team">Team</a></li>
+          <li><a href="/view/docdashboard">Dashboard</a></li>
           <li><a href="/#contact">Contact Us</a></li>         
           <li><a class="logged-out" href="/view/signup"> Sign Up</a></li>
 
