--- a/view/docreviews.html
+++ b/view/docreviews.html
@@ -51,14 +51,14 @@
           <li class="drop-down"><a href="#services">Services</a>
             <ul>
               <li><a href="doctor list/newdoc.html">Book Appointment</a></li>
-              <li><a href="testmeditation/home/meditation.html">Meditation</a></li>
+            
             </ul>
           </li>
-          <li><a href="blog/blog/blog.html">Blog</a></li>
-          <li><a href="https://positivae-epsile.herokuapp.com/">Anonymous Chat</a></li>
-          <li><a href="#team">Team</a></li>
-          <li><a href="#contact">Contact Us</a></li>         
-          <li><a class="logged-out" href="login page/login.html"> Sign Up</a></li>
+          <li><a href="/view/blog">Blog</a></li>
+          <li><a href="/view/anomainpage">Anonymous Chat</a></li>
+          <li><a href="/view/docdashboard">Dashboard</a></li>
+          <li><a href="/#contact">Contact Us</a></li>         
+          <li><a class="logged-out" href="/view/signup"> Sign Up</a></li>
 
           <li>
               <a class="logged-in" href="#" id="logout"></i> Logout</a>
