--- a/view/blogfoodmain.html
+++ b/view/blogfoodmain.html
@@ -20,7 +20,7 @@
   <link href="/positivae/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="/positivae/venobox/venobox.css" rel="stylesheet">
   <link href="/positivae/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
-  <link href="/positivaepositivae/aos/aos.css" rel="stylesheet">
+  <link href="/positivae/aos/aos.css" rel="stylesheet">
 
   <!--bot-->
   <link rel="stylesheet" type="text/css" href="/css/jquery.convform.css">
@@ -108,7 +108,7 @@
           <h3 class="sidebar-title">Categories</h3>
           <div class="sidebar-item categories">
             <ul>
-              <li><a href="/tech">Technology</a></li>
+              <li><a href="/view/tech">Technology</a></li>
                     <li><a href="/view/travel">Travel</a></li>
                     <li><a href="/view/humour">Humour</a></li>
                     <li><a href="/view/food">Food</a></li>
