--- a/view/userpresc.html
+++ b/view/userpresc.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Dashbord-trans</title>
+  <title>Dashbord-prescr</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -22,12 +22,12 @@
   <link href="/positivae/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="/positivae/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
   <link href="/positivae/venobox/venobox.css" rel="stylesheet">
-  
+
 <!--bot-->
   <link rel="stylesheet" type="text/css" href="/css/jquery.convform.css">
 
   <!-- Template Main CSS File -->
-  <link href="/css/usertransc.css" rel="stylesheet">
+  <link href="/css/userpresc.css" rel="stylesheet">
 
 </head>
 
@@ -40,18 +40,17 @@
 
       <div class="logo mr-auto">
        
-        <a href="index.html"><img src="/img/new logo.png" alt="" class="img-fluid"></a>
+        <a href="/"><img src="/img/new logo.png" alt="" class="img-fluid"></a>
       </div>
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-
-
-          <li><a href="#Part1">Home</a></li>
+          
+          <li><a href="/">Home</a></li>
           <li class="drop-down"><a href="#services">Services</a>
             <ul>
-              <li><a href="doctor list/newdoc.html">Book Appointment</a></li>
-            
+              <li><a href="/view/doctorscategory">Book Appointment</a></li>
+           
             </ul>
           </li>
           <li><a href="/view/blog">Blog</a></li>
@@ -62,7 +61,7 @@
           <li><a class="logged-out" href="/view/signup"> Sign Up</a></li>
 
           <li>
-              <a class="logged-in" href="#" id="logout"></i> Logout</a>
+              <a class="logged-in" href="/" id="logout">Logout</a>
           </li>
         </ul>
       </nav>
@@ -71,26 +70,26 @@
     </div>
   </header><!-- End Header -->
 
-  <!-- ======= transition ======= -->
-  <section id="faq" class="faq section-bg">
-    <div class="container">
 
-      <div class="section-title" data-aos="fade-up" style="margin-top: 20px;">
-        <h2>Reviews</h2>
-        
-      </div>
-
-      <div class="faq-list">
-        <ul class="lists">
+    <!-- ======= transition ======= -->
+    <section id="faq" class="faq section-bg">
+      <div class="container">
+  
+        <div class="section-title" data-aos="fade-up" style="margin-top: 20px;">
+          <h2>Prescriptions</h2>
           
-
-        </ul>
+        </div>
+  
+        <div class="faq-list">
+          <ul class="lists">
+          
+          </ul>
+        </div>
+  
       </div>
+    </section><!-- End trans Section -->
 
-    </div>
-  </section><!-- End trans Section -->
  
-   
 
 <!--Bot -->
 <div class="chat_icon">
@@ -145,6 +144,7 @@
         });
     });
 </script>
+
 <!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-app.js "></script>
 <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-auth.js "></script>
@@ -154,7 +154,6 @@
 <!-- TODO: Add SDKs for Firebase products that you want to use
  https://firebase.google.com/docs/web/setup#available-libraries -->
 <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-analytics.js "></script>
-
 
 
   <!-- positivae JS Files -->
@@ -174,8 +173,7 @@
 
   <!-- Template Main JS File -->
   <script src="/js/main.js"></script>
-  <script src="/js/docreviews.js"></script>
-
+  <script src="/js/userpresc.js"></script>
 </body>
 
 </html>
