--- a/view/blog.html
+++ b/view/blog.html
@@ -57,7 +57,8 @@
           </li>
           <li><a href="/view/blog">Blog</a></li>
           <li><a href="/view/anomainpage">Anonymous Chat</a></li>
-          <li><a href="/view/docdashboard">Dashboard</a></li>
+          <li><a href="/view/docdashboard" class="doctor"> Doctor Dashboard</a></li>
+       <li><a href="/view/userdashboard" class="user"> User Dashboard</a></li>
           <li><a href="/#contact">Contact Us</a></li>         
           <li><a class="logged-out" href="/view/signup"> Sign Up</a></li>
 
