--- a/view/home.html
+++ b/view/home.html
@@ -43,7 +43,7 @@
    <nav class="nav-menu d-none d-lg-block">
      <ul>
 
-       <li class="active"><a href="#Part1">Home</a></li>
+       <li class="active"><a href="/">Home</a></li>
        <li class="drop-down"><a href="#services">Services</a>
          <ul>
            <li><a href="/view/doctorscategory">Book Appointment</a></li>
@@ -52,7 +52,8 @@
        </li>
        <li ><a href="/view/blog">Blog</a></li>
        <li><a href="/view/anomainpage">Anonymous Chat</a></li>
-       <li><a href="/view/docdashboard">Dashboard</a></li>
+       <li><a href="/view/docdashboard" class="doctor"> Doctor Dashboard</a></li>
+       <li><a href="/view/userdashboard" class="user"> User Dashboard</a></li>
        <li><a href="/#contact">Contact Us</a></li>         
        <li><a class="logged-out" href="/view/signup"> Sign Up</a></li>
        <li>
@@ -174,17 +175,22 @@
         <div class="col-lg-4 col-md-6 icon-box" data-aos="zoom-in" data-aos-delay="100">
           <div class="icon"><i class="icofont-prescription"></i></div>
           <h4 class="title"><a href="">Enroll Yourself On Positivae.</a></h4>
-          <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+          <p class="description">Register or find yourself 
+            Enter your name, gender, e-mail number, mobile phone number and clinic/facility name
+            </p>
         </div>
         <div class="col-lg-4 col-md-6 icon-box" data-aos="zoom-in" data-aos-delay="200">
           <div class="icon"><i class="icofont-papers"></i></div>
           <h4 class="title"><a href="">Add Your Profile Information.</a></h4>
-          <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+          <p class="description">Add your profile information
+            Provide information about yourself, your practice, including your medical enrollment, fees, schedules and more.</p>
         </div>
         <div class="col-lg-4 col-md-6 icon-box" data-aos="zoom-in" data-aos-delay="300">
           <div class="icon"><i class="icofont-live-support"></i></div>
           <h4 class="title"><a href="">Help Us Veriy Your Details.</a></h4>
-          <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+          <p class="description">
+            Help us verify your details
+            Complete our easy on-line verification process and get started!</p>
         </div>     
       </div>
       <div class="butt">
