--- a/view/meditation.html
+++ b/view/meditation.html
@@ -51,22 +51,22 @@
       <nav class="nav-menu d-none d-lg-block">
         <ul>
 
-
           <li><a href="/">Home</a></li>
           <li class="drop-down"><a href="#services">Services</a>
             <ul>
               <li><a href="/view/doctorscategory">Book Appointment</a></li>
-              <li><a href="#">Meditation</a></li>
+           
             </ul>
           </li>
           <li><a href="/view/blog">Blog</a></li>
           <li><a href="/view/anomainpage">Anonymous Chat</a></li>
-          <li><a href="/#team">Team</a></li>
+          <li><a href="/view/docdashboard" class="doctor"> Doctor Dashboard</a></li>
+       <li><a href="/view/userdashboard" class="user"> User Dashboard</a></li>
           <li><a href="/#contact">Contact Us</a></li>         
           <li><a class="logged-out" href="/view/signup"> Sign Up</a></li>
 
           <li>
-              <a class="logged-in" href="/" id="logout"></i> Logout</a>
+              <a class="logged-in" href="/" id="logout">Logout</a>
           </li>
         </ul>
       </nav>
