--- a/view/userdash.html
+++ b/view/userdash.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Dashbord</title>
+  <title>User Dashbord</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -46,12 +46,12 @@
       <nav class="nav-menu d-none d-lg-block">
         <ul>
 
+          
           <li><a href="/">Home</a></li>
           <li class="drop-down"><a href="#services">Services</a>
             <ul>
               <li><a href="/view/doctorscategory">Book Appointment</a></li>
-            
-              
+           
             </ul>
           </li>
           <li><a href="/view/blog">Blog</a></li>
@@ -61,9 +61,8 @@
           <li><a href="/#contact">Contact Us</a></li>         
           <li><a class="logged-out" href="/view/signup"> Sign Up</a></li>
 
-
           <li>
-              <a class="logged-in" href="/" id="logout"></i> Logout</a>
+              <a class="logged-in" href="/" id="logout">Logout</a>
           </li>
         </ul>
       </nav>
@@ -90,7 +89,7 @@
             </svg>
             <i class="icofont-ui-user"></i>
           </div>
-          <h4><a href="/view/docprofile/45">PROFILE</a></h4>
+          <h4><a href="/view/userprofile/45">PROFILE</a></h4>
          
         </div>
       </div>
@@ -103,7 +102,7 @@
             </svg>
             <i class="icofont-calendar"></i>
           </div>
-          <h4><a href="/view/docappointments/45">APPOINTMENT</a></h4>
+          <h4><a href="/view/userappointments/45">APPOINTMENT</a></h4>
          
         </div>
       </div>
@@ -119,7 +118,7 @@
             </svg>
             <i class="icofont-file-document"></i>
           </div>
-          <h4><a href="/view/docprescriptions/45">PRESCRIPTION</a></h4>
+          <h4><a href="/view/userprescriptions/45">PRESCRIPTION</a></h4>
           
         </div>
       </div>
@@ -132,7 +131,7 @@
             </svg>
             <i class="icofont-money-bag"></i>
           </div>
-          <h4><a href="/view/docreviews/45">REVIEWS</a></h4>
+          <h4><a href="/view/usertransactions/45">TRANSACTIONS</a></h4>
           
         </div>
       </div>
