--- a/view/blogfood.html
+++ b/view/blogfood.html
@@ -127,7 +127,7 @@
                     <li><a href="/view/travel">Travel</a></li>
                     <li><a href="/view/humour">Humour</a></li>
                     <li><a href="/view/food">Food</a></li>
-                    <li><a href="#">Others</a></li>
+                    <li><a href="/view/other">Others</a></li>
                   </ul>
   
                 </div><!-- End sidebar categories-->
