--- a/view/blog.html
+++ b/view/blog.html
@@ -100,6 +100,9 @@
       <li class="nav-item">
         <a class="nav-link"  href="/view/humour">Humour</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link"  href="/view/other">Others</a>
+      </li>
     </ul>
   </div>
   <div class="col-lg-9 mt-4 mt-lg-0">
