--- a/view/blogother.html
+++ b/view/blogother.html
@@ -5,11 +5,12 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Blog details</title>
+  <title>Blog type </title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
+ 
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -20,13 +21,13 @@
   <link href="/positivae/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="/positivae/venobox/venobox.css" rel="stylesheet">
   <link href="/positivae/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
-  <link href="/positivae/aos/aos.css" rel="stylesheet">
+  <link href="/positivaepositivae/aos/aos.css" rel="stylesheet">
 
   <!--bot-->
   <link rel="stylesheet" type="text/css" href="/css/jquery.convform.css">
 
   <!-- Main CSS File -->
-  <link href="/css/blogfoodmain.css" rel="stylesheet">
+  <link href="/css/blogfood.css" rel="stylesheet">
 
 
 </head>
@@ -40,31 +41,33 @@
 
      <div class="logo mr-auto">
       
-       <a href="/"><img src="img/new logo.png" alt="" class="img-fluid"></a>
+       <a href="/"><img src="/img/new logo.png" alt="" class="img-fluid"></a>
      </div>
 
      <nav class="nav-menu d-none d-lg-block">
-       <ul>
+      <ul>
 
-        <li><a href="/">Home</a></li>
-        <li class="drop-down"><a href="#services">Services</a>
-          <ul>
-            <li><a href="/view/doctorscategory">Book Appointment</a></li>
-            
-            
-          </ul>
-        </li>
-        <li><a href="/view/blog">Blog</a></li>
-        <li><a href="/view/anomainpage">Anonymous Chat</a></li>
-        <li><a href="/view/docdashboard" class="doctor"> Doctor Dashboard</a></li>
-       <li><a href="/view/userdashboard" class="user"> User Dashboard</a></li>
-        <li><a href="/#contact">Contact Us</a></li>         
-        <li><a class="logged-out" href="/view/signup"> Sign Up</a></li>
-         <li>
-             <a class="logged-in" href="/" id="logout"></i> Logout</a>
+
+       <li><a href="/">Home</a></li>
+         <li class="drop-down"><a href="#services">Services</a>
+           <ul>
+             <li><a href="/view/doctorscategory">Book Appointment</a></li>
+        
+             
+           </ul>
          </li>
-       </ul>
-     </nav>
+         <li><a href="/view/blog">Blog</a></li>
+         <li><a href="/view/anomainpage">Anonymous Chat</a></li>
+         <li><a href="/view/docdashboard" class="doctor"> Doctor Dashboard</a></li>
+       <li><a href="/view/userdashboard" class="user"> User Dashboard</a></li>
+         <li><a href="/#contact">Contact Us</a></li>         
+         <li><a class="logged-out" href="/view/signup"> Sign Up</a></li>
+
+        <li>
+            <a class="logged-in" href="/" id="logout"></i> Logout</a>
+        </li>
+      </ul>
+    </nav>
      <!-- .nav-menu -->
 
    </div>
@@ -73,71 +76,83 @@
   <main id="main">
 
     
-<!-- ======= Blog Section ======= -->
-<section id="blog" class="blog">
-  <div class="container">
+    <!-- ======= Blog Section ======= -->
+    <section id="blog" class="blog">
+        <div class="container">
+  
+          <div class="row">
+  
+            <div class="col-lg-8 entries">
+                <div class="row">
 
-    <div class="row">
-
-      <div class="col-lg-8 entries">
-
-        <article class="entry entry-single">
-
+                    <div class=" col-md-12 d-flex align-items-stretch" data-aos="fade-up">
+                      <article class="entry">
           
-
-        </article><!-- End blog entry -->
-
-
-
-        
-
-      </div><!-- End blog entries list -->
-
-      <div class="col-lg-4">
-
-        <div class="sidebar">
-
-          <h3 class="sidebar-title">Search</h3>
-          <div class="sidebar-item search-form">
-            <form action="">
-              <input type="text">
-              <button type="submit"><i class="icofont-search"></i></button>
-            </form>
-
-          </div><!-- End sidebar search formn-->
-
-          <h3 class="sidebar-title">Categories</h3>
-          <div class="sidebar-item categories">
-            <ul>
-              <li><a href="/view/tech">Technology</a></li>
+                      </article><!-- End blog entry -->
+                    </div>
+          
+                    
+          
+                  </div>
+          
+                  <div class="blog-pagination" data-aos="fade-up">
+                    <ul class="justify-content-center">
+                      <li class="disabled"><i class="icofont-rounded-left"></i></li>
+                      <li><a href="#">1</a></li>
+                      <li class="active"><a href="#">2</a></li>
+                      <li><a href="#">3</a></li>
+                      <li><a href="#"><i class="icofont-rounded-right"></i></a></li>
+                    </ul>
+                  </div>
+  
+            </div><!-- End blog entries list -->
+  
+            <div class="col-lg-4">
+  
+              <div class="sidebar">
+  
+                <h3 class="sidebar-title">Search</h3>
+                <div class="sidebar-item search-form">
+                  <form action="">
+                    <input type="text">
+                    <button type="submit"><i class="icofont-search"></i></button>
+                  </form>
+  
+                </div><!-- End sidebar search formn-->
+  
+                <h3 class="sidebar-title">Categories</h3>
+                <div class="sidebar-item categories">
+                  <ul>
+                    <li><a href="/view/tech">Technology</a></li>
                     <li><a href="/view/travel">Travel</a></li>
                     <li><a href="/view/humour">Humour</a></li>
                     <li><a href="/view/food">Food</a></li>
-              <li><a href="/view/other">Others</a></li>
-            </ul>
-
-          </div><!-- End sidebar categories-->
-
-          <h3 class="sidebar-title">Recent Posts</h3>
-          <div class="sidebar-item recent-posts">
-            
-
-
-          </div><!-- End sidebar recent posts-->
-
-         
-
-        </div><!-- End sidebar -->
-
-      </div><!-- End blog sidebar -->
-
-    </div>
-
-  </div>
-</section><!-- End Blog Section -->
+                    <li><a href="#">Others</a></li>
+                  </ul>
+  
+                </div><!-- End sidebar categories-->
+  
+                <h3 class="sidebar-title">Recent Posts</h3>
+                <div class="sidebar-item recent-posts">
+                  
+  
+  
+                </div><!-- End sidebar recent posts-->
+  
+              </div><!-- End sidebar -->
+  
+            </div><!-- End blog sidebar -->
+  
+          </div>
+  
+        </div>
+      </section><!-- End Blog Section -->
 
 
 
+
+
+   
 
   </main><!-- End #main -->
 
@@ -185,15 +200,15 @@
 </div>
 <!--Bot end -->
 
-   <!-- The core Firebase JS SDK is always required and must be listed first -->
-   <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-app.js "></script>
-   <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-auth.js "></script>
-   <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-firestore.js "></script>
-   <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-storage.js "></script>
- 
-   <!-- TODO: Add SDKs for Firebase products that you want to use
-    https://firebase.google.com/docs/web/setup#available-libraries -->
-   <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-analytics.js "></script>
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-app.js "></script>
+  <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-auth.js "></script>
+  <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-firestore.js "></script>
+  <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-storage.js "></script>
+
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+   https://firebase.google.com/docs/web/setup#available-libraries -->
+  <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-analytics.js "></script>
 
   <!-- positivae JS Files -->
   <script src="/positivae/jquery/jquery.min.js"></script>
@@ -212,8 +227,9 @@
    <script type="text/javascript" src="/js/custom.js"></script>
    
   <!-- Main JS File -->
-  <script src="js/main.js"></script>
-<script src="/js/blogfoodmain.js"></script>
+  <script src="/js/main.js"></script>
+  <script src="/js/blogother.js"></script>
+
 </body>
 
 </html>
