--- a/view/blogothermain.html
+++ b/view/blogothermain.html
@@ -113,7 +113,7 @@
                     <li><a href="/view/travel">Travel</a></li>
                     <li><a href="/view/humour">Humour</a></li>
                     <li><a href="/view/food">Food</a></li>
-              <li><a href="/view/other">Others</a></li>
+              <li><a href="#">Others</a></li>
             </ul>
 
           </div><!-- End sidebar categories-->
@@ -213,7 +213,7 @@
    
   <!-- Main JS File -->
   <script src="js/main.js"></script>
-<script src="/js/blogfoodmain.js"></script>
+<script src="/js/blogothermain.js"></script>
 </body>
 
 </html>
