--- a/view/doctorform.html
+++ b/view/doctorform.html
@@ -35,7 +35,11 @@
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script>
-     
+    // document.getElementById("but").addEventListener("click", function() {
+    //event.preventDefault();
+    //alert("Message Submitted");
+    //window.location.href="/";
+ // });
   </script>
 </body>
 
